--- a/backend-app/docker-compose.yaml
+++ b/backend-app/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build: .
@@ -16,14 +14,14 @@ services:
       - default
 
   db:
-    image: postgres:15
+    image: postgres:17
     restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
-      POSTGRES_DB: fraude-detection
+      POSTGRES_DB: fraude_detection
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
